--- a/index.html
+++ b/index.html
@@ -156,6 +156,13 @@
             background: linear-gradient(135deg, #fff 0%, #e0ebff 100%);
         }
 
+        .legendary-card img {
+            max-width: 150px;
+            height: auto;
+            margin-bottom: 15px;
+            image-rendering: pixelated;
+        }
+
         .legendary-card h3 {
             font-size: 24px;
             margin-bottom: 10px;
@@ -289,11 +296,7 @@
             box-shadow: 0 0 10px rgba(255, 215, 0, 0.3);
         }
 
-        /* Form Section */
-        .form-section {
-            scroll-margin-top: 20px;
-        }
-
+        /* Scoreboard */
         .section-title {
             font-size: 22px;
             font-weight: bold;
@@ -303,39 +306,6 @@
             text-align: center;
         }
 
-        .section-subtitle {
-            font-size: 13px;
-            text-transform: uppercase;
-            letter-spacing: 1px;
-            color: #4a4a4a;
-            margin-bottom: 20px;
-            text-align: center;
-        }
-
-        .form-container {
-            background: #fff;
-            border: 4px solid #2a2a2a;
-            padding: 10px;
-            box-shadow: 
-                inset -2px -2px 0 rgba(0,0,0,0.2),
-                inset 2px 2px 0 rgba(255,255,255,0.7),
-                4px 4px 0 rgba(0,0,0,0.15);
-        }
-
-        .form-container iframe {
-            width: 100%;
-            min-height: 600px;
-            border: none;
-        }
-
-        .form-note {
-            text-align: center;
-            font-size: 13px;
-            margin-top: 15px;
-            color: #4a4a4a;
-        }
-
-        /* Scoreboard */
         .scoreboard {
             display: grid;
             grid-template-columns: 1fr;
@@ -381,6 +351,13 @@
             font-size: 36px;
             font-weight: bold;
             margin: 10px 0;
+        }
+
+        .form-note {
+            text-align: center;
+            font-size: 13px;
+            margin-top: 15px;
+            color: #4a4a4a;
         }
 
         /* Footer */
@@ -444,17 +421,19 @@
 
             <div class="legendary-cards">
                 <div class="legendary-card mew">
+                    <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/151.png" alt="Mew">
                     <h3>MEW 💖</h3>
                     <p>→ GIRL</p>
                 </div>
                 <div class="legendary-card mewtwo">
+                    <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/150.png" alt="Mewtwo">
                     <h3>MEWTWO 💙</h3>
                     <p>→ BOY</p>
                 </div>
             </div>
 
             <div style="text-align: center;">
-                <a href="#form-section" class="pixel-button">
+                <a href="https://docs.google.com/forms/d/e/1FAIpQLSe8sA6oYredpNbWiTRHu8Pi1c22LPrsPy3q_Lab5SsDUmrKDQ/viewform?usp=sharing&ouid=107897704704704490056" target="_blank" class="pixel-button">
                     <span class="blink">▶</span> SUBMIT YOUR GUESS
                 </a>
                 <p class="hint-text">Use the same name you use in the group chat.</p>
@@ -490,18 +469,6 @@
                     ⏰ DEADLINE TO SUBMIT: [INSERT DATE/TIME] ⏰
                 </div>
             </div>
-        </div>
-
-        <!-- Form Section -->
-        <div id="form-section" class="pixel-panel form-section">
-            <h2 class="section-title">LOCK IN YOUR GUESS</h2>
-            <p class="section-subtitle">THIS IS YOUR OFFICIAL SUBMISSION.</p>
-            
-            <div class="form-container">
-                <iframe src="PASTE_GOOGLE_FORM_EMBED_LINK_HERE" frameborder="0">Loading…</iframe>
-            </div>
-            
-            <p class="form-note">ONE SUBMISSION PER PERSON PLEASE 🙂</p>
         </div>
 
         <!-- Scoreboard Section -->
