--- a/index.html
+++ b/index.html
@@ -433,7 +433,7 @@
             </div>
 
             <div style="text-align: center;">
-                <a href="https://docs.google.com/forms/d/e/1FAIpQLSe8sA6oYredpNbWiTRHu8Pi1c22LPrsPy3q_Lab5SsDUmrKDQ/viewform?usp=sharing&ouid=107897704704704490056" target="_blank" class="pixel-button">
+                <a href="https://docs.google.com/forms/d/e/1FAIpQLSe8sA6oYredpNbWiTRHu8Pi1c22LPrsPy3q_Lab5SsDUmrKDQ/viewform" target="_blank" rel="noopener noreferrer" class="pixel-button">
                     <span class="blink">▶</span> SUBMIT YOUR GUESS
                 </a>
                 <p class="hint-text">Use the same name you use in the group chat.</p>
