--- a/index.html
+++ b/index.html
@@ -484,7 +484,7 @@
                 </div>
 
                 <div class="deadline-bar">
-                    ⏰ DEADLINE TO SUBMIT: [INSERT DATE/TIME] ⏰
+                    ⏰ DEADLINE TO SUBMIT: 01/08/2026 ⏰
                 </div>
             </div>
         </div>
@@ -513,7 +513,7 @@
                 </div>
             </div>
             
-            <p class="form-note" style="margin-top: 20px;">UPDATED AS OF [INSERT DATE/TIME]</p>
+            <p class="form-note" style="margin-top: 20px;">UPDATED AS OF 01/06/2026 2:09pm CST </p>
         </div>
 
         <!-- Footer -->
@@ -524,3 +524,4 @@
     </div>
 </body>
 </html>
+
